[tool.poetry]
name = "doorstop-edit"
version = "0.1.0-beta4"
description = "Cross-platform doorstop GUI editor"
authors = ["Alexander Ernfridsson <ernfridsson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doorstop_edit"}]
include = [
     # override .gitignore
    "doorstop_edit/ui_gen/*_rc.py",
    "doorstop_edit/ui_gen/ui_*.py",
    "doorstop_edit/build_info.py"
]
exclude = ["**/test/**", "**/tests/**"]
homepage = "https://github.com/ownbee/doorstop-edit"
repository = "https://github.com/ownbee/doorstop-edit"
keywords = ["doorstop", "requirements-management", "documentation", "gui"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing :: Markup",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12" # PySide does not support higher version atm.
doorstop = ">=2.2.post1"
PySide6 = ">=6.4.0,<7.0.0"
qt-material = "^2.12"
markdown = "^3.4.0"
plantuml-markdown = "^3.8.0"
mdformat-myst = "^0.1.5"
pygments = "^2.14.0"
setuptools = "^65.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-qt = "^4.2.0"
black = "^22.12.0"
mypy = "^0.991"
types-requests = "^2.28.11.7"
flake8 = "^6.0.0"
isort = "^5.11.4"
colorama = "^0.4.6"
autoflake = "^2.0.0"
types-markdown = "^3.4.2.1"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.autoflake]
imports = ["requests", "PySide6"]

[tool.isort]
profile = "black"

[tool.poetry.scripts]
doorstop-edit = 'doorstop_edit.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
