[project]
name = "doorstop-edit"
version = "0.1.1"
description = "Cross-platform doorstop GUI editor"
authors = [{name ="Alexander Ernfridsson", email = "<ernfridsson@gmail.com>"}]
license = "MIT"
readme = "README.md"
keywords = ["doorstop", "requirements-management", "documentation", "gui"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing :: Markup",
]
urls = { Repository = "https://github.com/ownbee/doorstop-edit.git", GitHub = "https://github.com/ownbee/doorstop-edit" }
requires-python = ">=3.9,<3.12" # PySide does not support higher version atm.
dependencies = [
    "doorstop >=3.0.2, <4",
    "PySide6 ~=6.4",
    "qt-material ~=2.12",
    "markdown ~=3.4",
    "plantuml-markdown ~=3.8",
    "mdformat-myst ~=0.1.5",
    "pygments ~=2.14",
    "setuptools ~=65.0",
    "pyspellchecker ~=0.7",
    "watchdog ~=3.0",
]

[tool.poetry]
packages = [{include = "doorstop_edit"}]
include = [
     # override .gitignore
    "doorstop_edit/ui_gen/*.py",
    "doorstop_edit/build_info.py"
]
exclude = ["**/test/**", "**/tests/**", "**/conftest.py"]


[tool.poetry.group.dev.dependencies]

# Formatters
black = "^22.12.0"
autoflake = "^2.0.0"
isort = "^5.11.4"

# Linters
mypy = "~1.17"
flake8 = "^6.0.0"

# Testing
pytest = "^7.2.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.0.0"

# Tooling
colorama = "^0.4.6"

# Typing
types-requests = "^2.28.11.7"
types-markdown = "^3.4.2.1"
types-setuptools = "^65.6.0.3"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.autoflake]
imports = ["requests", "PySide6"]

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = 'normal'
ignore_missing_imports = true # Ignore since not all third-party use typing.
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "doorstop_edit.ui_gen.*"  # Generated directory.
follow_imports = 'silent'

[project.scripts]
doorstop-edit = 'doorstop_edit.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
